Add first challenge to just run the spark app.